--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -448,6 +448,7 @@ body {
   position: absolute;
   top: 100%;
   left: 0;
+  z-index: 100;
   min-width: 12rem;
   padding: 0.75rem 0;
   margin: 0;
